# sf-trading-system

./: .gitignore  .pre-commit-config.yaml  Backtest.py  Mom_assignment.ipynb  Momentum_replica.ipynb  Momentum_replica_2.ipynb  README.md  backtest.ipynb  backtest.py  backtest_example.py  data_examples.ipynb  datasets_example.ipynb  datasets_research.ipynb  idiosyncratic_calc.ipynb  idiosyncratic_calc_example.ipynb  mom_ass_replica.ipynb  mom_backtest.ipynb  pairs.ipynb  project.bash  pyproject.toml  slurm-2172611.out  slurm-2173239.out  slurm-2173244.out  slurm-2173245.out  slurm-2173342.out  slurm-2173343.out  test.ipynb  test.py  test1.ipynb  testing.ipynb  testing.py
database/: database.py
datasets/: dataset.py
research/: backtest_example.py  backtest_example_plot.py  backtest_example_summary.py  main.ipynb  momentum_bt.py
research/bettingAgainstBeta/: random_work.ipynb
research/classic_momentum/: monthly_momentum_bt.py  monthly_momentum_summary.py  monthly_replication.ipynb
research/constraints/: constraints_bt.py  summary.ipynb
reversal_research/: andrew_decomp.py  backtest_reversal_plot.py  backtester.py  barra_bt.py  monthly_optimized_barra_reversal.py  rev_barra.ipynb  reversal_backtest.py  reversal_backtest_5yr.py  reversal_plots.ipynb  signals.py  str.py  str_daily.ipynb  str_monthly.ipynb  test1.ipynb
silverfund/: alphas.py  backtester.py  chunked_data.py  config.py  constraints.py  covariance_matrix.py  current_portfolio.py  enums.py  new_risk_model.py  optimizers.py  performance.py  portfolios.py  records.py  scores.py  signals.py  strategies.py
(+193 files in other folders)
