[project]
name = "sf-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.6.0",
    "gdown>=5.2.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "polars>=1.19.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
]
