[project]
name = "sf-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.6.0",
    "exchange-calendars>=4.7",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "pre-commit>=4.0.1",
    "pyarrow>=18.1.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ray>=2.40.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
